Added README. Cleanup of some files

--- a/app/views/custom_buttons/index.html.erb
+++ b/app/views/custom_buttons/index.html.erb
@@ -1,38 +1,9 @@
 <% available_icons = [
   '',                     # (no icon)
-  'icon-add',
-  'icon-edit',
-  'icon-copy',
-  'icon-del',
-  'icon-move',
-  'icon-save',
-  'icon-cancel',
-  'icon-attachment',
-  'icon-zoom-in',
-  'icon-zoom-out',
-  'icon-folder',
-  'icon-folder-open',
-  'icon-package',
-  'icon-email',
-  'icon-time',
-  'icon-time-add',
-  'icon-fav',
-  'icon-fav-off',
-  'icon-reload',
-  'icon-lock',
-  'icon-unlock',
-  'icon-user',
-  'icon-group',
-  'icon-settings',
-  'icon-warning',
-  'icon-history',
-  'icon-comment',
-  'icon-context',
-  'icon-checked',
-  'icon-report',
-  'icon-export',
-  'icon-attachment-new'
-] %>
+  'icon-add', 'icon-edit', 'icon-copy', 'icon-del', 'icon-move', 'icon-save', 'icon-cancel', 'icon-attachment', 'icon-zoom-in', 'icon-zoom-out',
+  'icon-folder', 'icon-folder-open', 'icon-package', 'icon-email', 'icon-time', 'icon-time-add', 'icon-fav', 'icon-fav-off', 'icon-reload', 'icon-lock',
+  'icon-unlock', 'icon-user', 'icon-group', 'icon-settings', 'icon-warning', 'icon-history', 'icon-comment', 'icon-context', 'icon-checked', 'icon-report',
+  'icon-export', 'icon-attachment-new' ] %>
 
 <h2>Custom Buttons Configuration</h2>
 <%= form_tag url_for(controller: 'custom_buttons', action: 'update', only_path: true), method: :post do %>
